[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://src/dogeclicker/DogeClicker.tscn" type="PackedScene" id=2]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="GUI" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="GUI"]
margin_left = 595.0
margin_top = 171.0
margin_right = 1034.0
margin_bottom = 236.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinLabel" type="Label" parent="GUI"]
margin_left = 375.0
margin_top = 2.51472
margin_right = 525.0
margin_bottom = 26.5147
text = "Dogecoins"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DogeClicker" parent="." instance=ExtResource( 2 )]
position = Vector2( 247.221, 229.241 )
scale = Vector2( 3.76, 3.76 )

[node name="AutoFarmTimer" type="Timer" parent="."]
[connection signal="timeout" from="AutoFarmTimer" to="." method="_on_AutoFarmTimer_timeout"]
